# orchestration-center

./: .dockerignore  .env  .gcloudignore  .gitignore  AGENTS.md  Dockerfile  README.md  README_zh.md  deploy-all.ps1  docker-compose.yml  docker-entrypoint.sh  generate_access_password.py  generate_selfsign_cert.py  package-lock.json  pyproject.toml  requirement.txt  requirements.txt
.github/workflows/: ci.yml
agent_registry_client/: client.py  client_factory.py
common/: a2at_config.py  config.py  negotiation_utils.py
common/auth/: agent_credential_service.py  extension_interceptor.py
common/cert/: cert_exception.py  (+6 more)
config/: llm_config.json
docs/: A2A消息发送协议参考.md  DESIGN.md  orchestration_center_ui_usage_instructions.md  user_guide.md
framework/: start.py
orchestrate/: agentcard_loader.py  start.py  workflow_storage_instance.py
orchestration/: prompts.py  psop_generator.py
samples/: agentcard_loader.py  frontend_support_server.py  preflow_orchestrator_demo.py  start_agents_server.py  util.py
test/: test_exec_engine.py  test_frontend_support_server.py  test_middleware.py  test_parse_flow.py  test_persistence_retrieval.py  test_prompts.py  test_psop_generator.py  test_publish.py  test_response_utils.py
tests/: conftest.py  test_authenticate_util.py  test_cert_validator.py  test_cipher_util.py  test_conf_obj.py  test_cors_ssl_env.py  test_exec_engine.py  test_external_apis.py  test_json_utils.py  test_llm.py  test_middleware.py  test_persistence_retrieval.py  test_psop_generator.py  test_response_utils.py  test_semaphore_utils.py  test_solution_package_manager.py  test_sse_executor.py
workflow-designer/: .gitignore  README.md  eslint.config.js  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js
(+155 files in other folders)
