 [build-system]
 requires = ["setuptools>=68.0", "wheel"]
 build-backend = "setuptools.backends._legacy:_Backend"
 
 [project]
 name = "orchestration-center"
 version = "1.0.0"
 description = "AI Agent Orchestration Center"
 requires-python = ">=3.11"
 dependencies = [
     "pydantic>=2.12.5",
     "a2a-t-sdk>=0.1.8",
     "a2a-sdk[http-server]",
     "a2a-sdk[grpc]",
     "openai>=2.26.0",
     "fastapi>=0.135.1",
     "uvicorn>=0.42",
     "loguru>=0.7.3",
     "PyYAML>=6.0.3",
     "pymupdf",
     "limits>=5.8.0",
     "python-multipart>=0.0.24",
     "psycopg2-binary>=2.9.10",
 ]
 
 [project.optional-dependencies]
 dev = [
     "pytest>=8.0",
     "pytest-asyncio>=0.24",
     "ruff>=0.8.0",
     "mypy>=1.13.0",
 ]
 
 [tool.ruff]
 target-version = "py311"
 line-length = 120
 src = ["orchestrate", "common", "database", "samples"]
 
 [tool.ruff.lint]
 select = [
     "E",    # pycodestyle errors
     "W",    # pycodestyle warnings
     "F",    # pyflakes
     "I",    # isort
     "B",    # flake8-bugbear
     "UP",   # pyupgrade
     "SIM",  # flake8-simplify
 ]
 ignore = [
     "E501",   # line too long (handled by formatter)
     "B008",   # do not perform function calls in argument defaults (FastAPI Depends)
 ]
 
 [tool.ruff.lint.isort]
 known-first-party = ["orchestrate", "common", "database"]
 
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
 
 [tool.mypy]
 python_version = "3.11"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = false
 check_untyped_defs = true
 ignore_missing_imports = true
